# souffle

./: CMakeLists.txt  index.html  wasm.md
.github/actions/cmake-test/: action.yml
.github/actions/set-test-ids/: action.yml
.github/images/arch-linux/: entrypoint.sh
.github/workflows/: CI-Tests.yml  VS-CI-Tests.yml  create-packages.yml
cmake/: SouffleTests.cmake  common.py  redirect.py
debian/: changelog  souffle.bash-completion
src/: CMakeLists.txt  Global.cpp  Global.h  MainDriver.cpp  MainDriver.h  TranslationUnitBase.h  main.cpp  souffle-compile.template.py  souffle.cpp
src/ast/: Aggregator.cpp  IntrinsicAggregator.cpp  IntrinsicAggregator.h  Program.h  TranslationUnit.cpp  TranslationUnit.h  UserDefinedAggregator.cpp  UserDefinedAggregator.h
src/ast/analysis/: ClauseNormalisation.cpp  Constraint.h  ConstraintSystem.h  ErrorAnalyzer.h  Functor.cpp  Functor.h  IOType.h  JoinSize.cpp  JoinSize.h  ProfileUse.cpp  ProfileUse.h  RecursiveClauses.cpp  RedundantRelations.cpp  RelationSchedule.cpp  RelationSchedule.h  SCCGraph.cpp  SCCGraph.h  UniqueKeys.cpp  UniqueKeys.h  ValueChecker.h
src/ast/tests/: ast_print_test.cpp  ast_program_test.cpp  ast_transformers_test.cpp  ast_utils_test.cpp
src/ast/transform/: ExecutionPlanChecker.cpp  IODefaults.h  (+12 more)
src/ast2ram/: ClauseTranslator.h
src/interpreter/: Engine.cpp  Engine.h  Generator.cpp  Generator.h  Node.h
src/parser/: ParserDriver.cpp  ParserDriver.h  SrcLocation.cpp  SrcLocation.h  VirtualFileSystem.cpp  VirtualFileSystem.h  parser.yy  scanner.ll
src/ram/: AbstractAggregate.h  Aggregate.h  Aggregator.h  EstimateJoinSize.h  IndexAggregate.h  IntrinsicAggregator.h  ParallelAggregate.h  ParallelIndexAggregate.h  Relation.h  StringConstant.h  TranslationUnit.cpp  UserDefinedAggregator.h
src/reports/: DebugReport.cpp  DebugReport.h  ErrorReport.cpp  ErrorReport.h
src/smt/: Adapter.h  AdapterCVC.h  AdapterZ3.h  Backend.h  BackendZ3.h  Clause.h  ClauseExpr.h  ClauseTerm.h  Common.h  Expr.h  Frontend.h  Query.h  Relation.h  SMT.h  Translator.cpp  Translator.h  Typing.h  Utils.h
src/synthesiser/: GenDb.cpp  GenDb.h  Relation.cpp  Relation.h  Synthesiser.cpp  Synthesiser.h  Utils.cpp  Utils.h
src/tests/: getopt_long_test.cpp
tests/: CMakeLists.txt
tests/errors/: CMakeLists.txt
tests/evaluation/: CMakeLists.txt
tests/example/: CMakeLists.txt
tests/interface/: CMakeLists.txt
tests/interface/aggregates/: B.csv  C.csv  CMakeLists.txt  aggregates.dl  functors.cpp
tests/libsouffle_interface/: CMakeLists.txt  vfs_overlay_test.cpp
tests/link/: CMakeLists.txt
tests/movery/: CMakeLists.txt
tests/provenance/: CMakeLists.txt
tests/scheduler/: CMakeLists.txt
tests/semantic/: CMakeLists.txt
tests/semantic/functor_fact/: CMakeLists.txt  functor_fact.dl  functors.cpp
tests/syntactic/: CMakeLists.txt
(+142 files in other folders)
